; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_source_crc.c_zip_source_crc.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_source_crc.c_zip_source_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip = type { i32 }
%struct.zip_source = type { i32 }
%struct.crc_context = type { i32, i64, i64, i64*, i64 }

@ZIP_ER_INVAL = common dso_local global i32 0, align 4
@ZIP_ER_MEMORY = common dso_local global i32 0, align 4
@crc_read = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.zip_source* @zip_source_crc(%struct.zip* %0, %struct.zip_source* %1, i32 %2) #0 {
  %4 = alloca %struct.zip_source*, align 8
  %5 = alloca %struct.zip*, align 8
  %6 = alloca %struct.zip_source*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.crc_context*, align 8
  store %struct.zip* %0, %struct.zip** %5, align 8
  store %struct.zip_source* %1, %struct.zip_source** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.zip_source*, %struct.zip_source** %6, align 8
  %10 = icmp eq %struct.zip_source* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.zip*, %struct.zip** %5, align 8
  %13 = getelementptr inbounds %struct.zip, %struct.zip* %12, i32 0, i32 0
  %14 = load i32, i32* @ZIP_ER_INVAL, align 4
  %15 = call i32 @_zip_error_set(i32* %13, i32 %14, i32 0)
  store %struct.zip_source* null, %struct.zip_source** %4, align 8
  br label %48

16:                                               ; preds = %3
  %17 = call i64 @malloc(i32 40)
  %18 = inttoptr i64 %17 to %struct.crc_context*
  store %struct.crc_context* %18, %struct.crc_context** %8, align 8
  %19 = icmp eq %struct.crc_context* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load %struct.zip*, %struct.zip** %5, align 8
  %22 = getelementptr inbounds %struct.zip, %struct.zip* %21, i32 0, i32 0
  %23 = load i32, i32* @ZIP_ER_MEMORY, align 4
  %24 = call i32 @_zip_error_set(i32* %22, i32 %23, i32 0)
  store %struct.zip_source* null, %struct.zip_source** %4, align 8
  br label %48

25:                                               ; preds = %16
  %26 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %27 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %26, i32 0, i32 4
  store i64 0, i64* %27, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %30 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %32 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %31, i32 0, i32 3
  %33 = load i64*, i64** %32, align 8
  %34 = getelementptr inbounds i64, i64* %33, i64 1
  store i64 0, i64* %34, align 8
  %35 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %36 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %35, i32 0, i32 3
  %37 = load i64*, i64** %36, align 8
  %38 = getelementptr inbounds i64, i64* %37, i64 0
  store i64 0, i64* %38, align 8
  %39 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %40 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %39, i32 0, i32 2
  store i64 0, i64* %40, align 8
  %41 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %42 = getelementptr inbounds %struct.crc_context, %struct.crc_context* %41, i32 0, i32 1
  store i64 0, i64* %42, align 8
  %43 = load %struct.zip*, %struct.zip** %5, align 8
  %44 = load %struct.zip_source*, %struct.zip_source** %6, align 8
  %45 = load i32, i32* @crc_read, align 4
  %46 = load %struct.crc_context*, %struct.crc_context** %8, align 8
  %47 = call %struct.zip_source* @zip_source_layered(%struct.zip* %43, %struct.zip_source* %44, i32 %45, %struct.crc_context* %46)
  store %struct.zip_source* %47, %struct.zip_source** %4, align 8
  br label %48

48:                                               ; preds = %25, %20, %11
  %49 = load %struct.zip_source*, %struct.zip_source** %4, align 8
  ret %struct.zip_source* %49
}

declare dso_local i32 @_zip_error_set(i32*, i32, i32) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local %struct.zip_source* @zip_source_layered(%struct.zip*, %struct.zip_source*, i32, %struct.crc_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
